[project]
name = "bsky-bots"
version = "0.1.0"
authors = [
    { name = "lokxii", email = "9tin9tin9@gmail.com" }
]
dependencies = [
    "atproto>=0.0.48",
    "flask==3.0.2",
    "janome==0.5.0",
    "numpy==1.26.0",
    "pandas==2.2.0",
    "python-dotenv>=1.0.1",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black==24.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 80
